--- a/.github/workflows/cii.yml
+++ b/.github/workflows/cii.yml
@@ -29,7 +29,7 @@ jobs:
           python-version: '3.x'
 
       - name: Install test dependencies.
-        run: pip3 install ansible molecule[docker] docker
+        run: pip3 install ansible molecule[docker] docker && python3 -m pip install --user "molecule-plugins[docker]"
 
       - name: Run Molecule tests.
         run: molecule test
