--- a/.github/workflows/cii.yml
+++ b/.github/workflows/cii.yml
@@ -32,4 +32,4 @@ jobs:
         run: pip3 install ansible molecule[docker] docker && python3 -m pip install --user "molecule-plugins[docker]"
 
       - name: Run Molecule tests.
-        run: molecule test
+        run: molecule --debug test
