--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -128,13 +128,24 @@
   when: ansible_facts['os_family'] == "RedHat"
 
 
-- name: Ensure nginx Restart nginx
+- name: Ensure nginx Restart nginx on Debian
   become: true
   ansible.builtin.service:
     name: nginx
     state: started
     enabled: true
   notify: Check HTTP Service Debian
+  tags:
+    - always
+  when: ansible_facts['os_family'] == "Debian"
+
+- name: Ensure nginx Restart nginx on Centos
+  become: true
+  ansible.builtin.service:
+    name: nginx
+    state: started
+    enabled: true
+  notify: Check HTTP Service Centos
   tags:
     - always
   when: ansible_facts['os_family'] == "Debian"
