--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -12,20 +12,20 @@ jobs:
     steps:
       - name: retrieve collection code and update submodule
         run: |
-          git clone https://github.com/eazytrainingfr/ansible-collection_webapp.git
-          cd ansible-collection_webapp
+          git clone --recursive https://github.com/louismichel100/ansible-collection-webapp.git
+          cd ansible-collection-webapp
           git submodule update --init --recursive
           cd roles/nginx
           git pull origin main
           cd ../..
           git add .
-          git config --global user.email "eazytrainingfr@gmail.com"
-          git config --global user.name "eazytrainingfr"
+          git config --global user.email "sangalamballamichel@gmail.com"
+          git config --global user.name "louismichel100"
           git commit -m "update role nginx commit ${{ github.sha }}"
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.ANSIBLE_TOKEN }}
           branch: main
-          directory: ansible-collection_webapp
-          repository: eazytrainingfr/ansible-collection_webapp
+          directory: ansible-collection-webapp
+          repository: louismichel100/ansible-collection-webapp
