--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -39,7 +39,7 @@
 
 - name: Firewalld | allow incoming HTTP connections
   become: true
-  ansible.posix.firewalld:
+  firewalld:
     service: http
     permanent: true
     immediate: true
@@ -55,7 +55,7 @@
   when: ansible_facts['os_family'] == "RxedHat"
 
 - name: Redirect port 80 to 81 on centos
-  ansible.posix.firewalld:
+  firewalld:
     rich_rule: rule family={{ item }} forward-port port=80 protocol=tcp to-port=81
     zone: public
     permanent: true
